# muffin-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  auth.py  docker-compose.yml  langgraph.json  pyproject.toml  pytest.ini  rate_limit_error.txt  roadmap.md  skills-lock.json
.claude/commands/: add-data-collection-agent.md  add-investment-agent.md
.claude/skills/: financial-prompt-engineering
.claude/skills/financial-prompt-engineering/: SKILL.md
.github/workflows/: build-image.yml  build-images.yml  build-nuq-postgres.yml
docs/: backtester.md  data-collection-agents.md  debugging-locally.md  deployment.md  integration-testing.md  investment-process.md  multi-agent.md  paper-trading.md  personas.md  prompt-writing-guide.md  trading-decision.md  valuation-specifics.md
docs/features/: checkpointing.md  cross-run-memory.md  research-agent.md  retry-policy.md  semantic-validators.md  skills.md  tool-result-cache.md
docs/features/_archive/: research-agent-frd.md
docs/scratch/: firecrawl-search-bug.md  improvements-v1.md  improvements-v2.md
docs/superpowers/plans/: 2026-07-23-subagent-execution-tree-backend.md
docs/superpowers/specs/: 2026-07-23-subagent-execution-tree-design.md
errors/: tool_context_error.txt
extras/: README.md
extras/agent-chat-ui/: Dockerfile
extras/firecrawl/: .env.example
extras/openbb/: .env.example  Dockerfile  README.md  openbb_mcp_tool_categories.json  openbb_mcp_tools.json  openbb_mcp_tools_summary.json  requirements.txt  tools_list_example.json
extras/openbb/notebooks/: gdp.ipynb  unemployment.ipynb
src/muffin_agent/: __init__.py  config.py  graph.py  mcp_config.py  model_config.py  web_config.py
src/muffin_agent/agents/: __init__.py  criteria_definition.py  criterion_evaluation.py  data_validation.py  equity_screening.py  investment_analysis.py  middleware.py  portfolio_decision.py  stock_evaluation.py  subagents.py
src/muffin_agent/backends/: __init__.py  docker_sandbox.py  local_sandbox.py
src/muffin_agent/backtesting/: engine.py
src/muffin_agent/middlewares/: __init__.py
src/muffin_agent/multi_agent/: __init__.py  _formatters.py  conference.py  judges.py  moderators.py  participants.py  state.py  terminators.py
src/muffin_agent/pipeline/: __init__.py  state.py
src/muffin_agent/portfolio/: __init__.py
src/muffin_agent/prompts/: __init__.py  criteria_definition.jinja  criterion_evaluation.jinja  data_validation.jinja  equity_estimates.jinja  equity_fundamentals.jinja  equity_price.jinja  etf_index.jinja  market_regime.jinja  regulatory_filings.jinja  sandbox.jinja  sector_analysis.jinja  stock_evaluation.jinja
src/muffin_agent/sandbox/: __init__.py  backend.py  config.py  factory.py  tool.py  tools.py
src/muffin_agent/tools/: __init__.py  credit_risk.py  macro.py  profitability.py  projections.py  risk.py  scoring_helpers.py  sector.py  sentiment.py  technicals.py  valuation.py  web.py
src/muffin_agent/utils/: _ensure_user_message_middleware.py  _input_prompt_middleware.py  _runtime_prompt_middleware.py  _structured_output_retry_middleware.py  _structured_response_to_state_middleware.py  agent_builder.py  backends.py  base_config.py  memory_config.py  observability.py  outcomes.py
src/muffin_cli/: __init__.py  main.py  output.py
tests/: conftest.py  test_auth.py  test_config.py  test_llm_retry_filter.py  test_rate_limiter.py
tests/agents/: test_company_analysis.py  test_criteria_definition.py  test_criterion_evaluation.py  test_currency_commodities.py  test_data_validation.py  test_discovery_screening.py  test_economy_macro.py  test_equity_estimates.py  test_equity_fundamentals.py  test_equity_ownership.py  test_equity_price.py  test_etf_index.py  test_fama_french.py  test_fixed_income.py  test_forecasting.py  test_investment_utils.py  test_market_regime.py  test_memory.py  test_middleware.py  test_news.py  test_options.py  test_regulatory_filings.py  test_risk_assessment.py  test_sector_analysis.py  test_stock_evaluation.py  test_tool_error_handler.py  test_validators.py
tests/agents/research/: conftest.py  test_classifier.py  test_graph.py  test_rerank.py  test_writer.py
tests/agents/test_criteria_analysis/: test_graph.py  test_merge_criteria.py  test_schemas.py
tests/agents/test_personas/: test_all_personas.py  test_council_graph.py  test_schemas.py  test_warren_buffett.py
tests/agents/test_personas_council/: test_council_graph.py
tests/agents/test_portfolio/: test_portfolio_decision_e2e.py  test_portfolio_nodes.py
tests/agents/test_specialists/: test_specialists.py
tests/backtesting/: test_engine.py  test_metrics.py
tests/cli/: test_decide_helpers.py
tests/integration/: __init__.py  conftest.py  test_capture_fixtures.py  test_council_graph_e2e.py  test_criteria_analysis.py  test_equity_price_collector.py  test_fixtures_schema.py  test_graphs_have_integration_tests.py  test_persona_peter_lynch.py  test_persona_tools_e2e.py  test_structured_output_retry.py  test_trading_analysts_e2e.py  test_trading_decision.py
tests/integration/_harness/: mcp.py  (+7 more)
tests/middlewares/: test_agent_capture.py  test_agent_capture_detail_store.py  test_agent_capture_records.py  test_agent_capture_tree.py  test_skill_suggestion.py  test_subagent_transcript.py  test_tool_telemetry.py
tests/multi_agent/: conftest.py  test_conference.py  test_formatters.py  test_judges.py  test_moderators.py  test_participants.py  test_terminators.py
tests/portfolio/: test_executor.py  test_state.py
tests/sandbox/: test_backend.py  test_factory.py  test_tool.py  test_tools.py
tests/tools/: test_credit_risk.py  test_macro.py  test_profitability.py  test_projections.py  test_risk.py  test_scoring_helpers.py  test_sector.py  test_sentiment.py  test_technicals.py  test_valuation.py  test_web.py
tests/utils/: test_agent_builder.py  test_agent_builder_state_aware.py  test_backends.py  test_memory_config.py  test_observability.py  test_structured_output_retry_middleware.py
(+628 files in other folders)
