[project]
name = "muffin"
version = "0.0.1"
description = "MufFin agent for investment opportunities analysis"
authors = [
    { name = "Alex March", email = "broaden.your@outlook.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-openrouter>=0.2.3",
    "python-dotenv",
    "langgraph-sdk",
    "langchain-mcp-adapters",
    "langgraph-cli",
    "pydantic",
    # Prompt templating
    "jinja2",
    # CLI
    "typer",
    "rich",
    # Observability
    "langfuse",
    "deepagents>=0.5.8",
    # Checkpointing (CLI persistence)
    "langgraph-checkpoint-sqlite",
    # Sandbox
    "opensandbox",
    "opensandbox-code-interpreter",
    # Technical-indicator computation (trading_decision Market analyst)
    "stockstats>=0.6.0",
    "pandas",
    # Required by pandas.DataFrame.to_markdown() (trading_decision tools).
    "tabulate",
]

[project.scripts]
muffin = "muffin_cli.main:main"


[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["*.jinja"]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP"
]
lint.ignore = []
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]
