[project]
name = "muffin"
version = "0.0.1"
description = "MufFin agent for investment opportunities analysis"
authors = [
    { name = "Alex March", email = "broaden.your@outlook.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.2.6",
    "langchain>=1.3",
    "langchain-openai>=1.3.3",
    "langchain-anthropic>=1.4.6",
    "langchain-openrouter>=0.2.3",
    "python-dotenv>=1.0",
    "langgraph-sdk>=0.3.15",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph-cli>=0.4.26",
    "pydantic>=2.13.4",
    # Prompt templating
    "jinja2>=3.1",
    # CLI
    "typer>=0.24",
    "rich>=14.3",
    # Observability
    "langfuse>=4.9.1",
    "deepagents>=0.6.3",
    # Checkpointing (CLI persistence)
    "langgraph-checkpoint-sqlite>=3.1",
    # Sandbox
    "opensandbox>=0.1.9",
    "opensandbox-code-interpreter>=0.1.2",
    # Technical-indicator computation (trading_decision Market analyst)
    "stockstats>=0.6.8",
    "pandas>=3.0.3",
    # Required by pandas.DataFrame.to_markdown() (trading_decision tools).
    "tabulate>=0.10",
]

[project.scripts]
muffin = "muffin_cli.main:main"


[project.optional-dependencies]
dev = [
    "mypy>=2.1",
    "ruff>=0.15.15",
    "pytest>=9.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["*.jinja"]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP"
]
lint.ignore = []
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
# Persona / specialist modules are heavy on small typed Pydantic sub-evidence
# models and persona-specific scorer/node functions whose names + Pydantic
# field types are fully self-documenting.  Module-level docstrings explain the
# subgraph architecture; class/function docstrings would be noise.
"src/muffin_agent/agents/personas_council/personas/*.py" = ["D101", "D103"]
"src/muffin_agent/agents/personas_council/specialists/*.py" = ["D101", "D103"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.26",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
